# ELAS_Opencv

./: README.md
libelas/: CMakeCache.txt  Makefile  cmake_install.cmake  elas
ls_elas/: CMakeLists.txt
ls_elas/src/: descriptor.h  elas.cpp  elas.h  main.cpp
orb_elas/: CMakeLists.txt
orig_elas/: CMakeCache.txt  CMakeLists.txt  Makefile  Support_Points_ori.txt  cmake_install.cmake  disparity.pgm  test_ori_elas
orig_elas/img/depth/: DepthImage_CL_19_06_24_13_50_20.csv  DepthImage_CL_19_06_24_13_50_25.csv  DepthImage_CL_19_06_24_13_50_29.csv  DepthImage_CL_19_06_24_13_50_34.csv  DepthImage_CL_19_06_24_13_50_39.csv  DepthImage_CL_19_06_24_13_50_44.csv  DepthImage_CL_19_06_24_13_50_49.csv  DepthImage_CL_19_06_24_13_50_53.csv  DepthImage_CL_19_06_24_13_50_59.csv  DepthImage_CL_19_06_24_13_51_03.csv  DepthImage_CL_19_06_24_13_51_08.csv  DepthImage_CL_19_06_24_13_51_13.csv  DepthImage_CL_19_06_24_13_51_18.csv  DepthImage_CL_19_06_24_13_51_23.csv  DepthImage_CL_19_06_24_13_51_27.csv  DepthImage_CL_19_06_24_13_51_33.csv  DepthImage_CL_19_06_24_13_51_37.csv  DepthImage_CL_19_06_24_13_51_42.csv  DepthImage_CL_19_06_24_13_51_47.csv  DepthImage_CL_19_06_24_13_51_52.csv  DepthImage_CL_19_06_24_13_51_57.csv  DepthImage_CL_19_06_24_13_52_01.csv  DepthImage_CL_19_06_24_13_52_06.csv  DepthImage_CL_19_06_24_13_52_11.csv  DepthImage_CL_19_06_24_13_52_16.csv  DepthImage_CL_19_06_24_13_52_21.csv  DepthImage_CL_19_06_24_13_52_26.csv  DepthImage_CL_19_06_24_13_52_30.csv  DepthImage_CL_19_06_24_13_52_35.csv  DepthImage_CL_19_06_24_13_52_40.csv  DepthImage_CL_19_06_24_13_52_45.csv  DepthImage_CL_19_06_24_13_52_50.csv  DepthImage_CL_19_06_24_13_52_55.csv  DepthImage_CL_19_06_24_13_52_59.csv  DepthImage_CL_19_06_24_13_53_04.csv  DepthImage_CL_19_06_24_13_53_09.csv  DepthImage_CL_19_06_24_13_53_14.csv  DepthImage_CL_19_06_24_13_53_19.csv  DepthImage_CL_19_06_24_13_53_24.csv  DepthImage_CL_19_06_24_13_53_29.csv  (+37 more)
orig_elas/src/: elas.cpp  elas.h  main.cpp
results_evaluation/: Support_Points_mod.txt  Support_Points_ori.txt  support_match_comp.m  support_match_comp.m~
test_elas/: CMakeCache.txt  CMakeLists.txt  Makefile  Support_Points_mod.txt  (+3 more)
test_modules/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test_ori_elas
test_modules/sineva_elas/: CMakeLists.txt
test_modules/sineva_elas/elas/include/: elas.h  stereo_match.h
test_modules/sineva_elas/elas/src/: descriptor.cpp  elas.cpp  stereo_match.cpp
test_modules/sineva_elas/nodes/: sineva_stereo_node.cpp
test_modules/src/: descriptor.cpp  descriptor.h  main.cpp
(+25 files in other folders)
